# archetype

./: .changelog.yml  .env  .env.sample  Cargo.toml  Dockerfile  Dockerfile.db  Dockerfile.web  MAINTAINERS.md  README.md  Rocket.toml  docker-compose.mac.yml  docker-compose.yml  package.json
db/: dev.db  test.db
db/seeds/: dev.sql
docker/: Dockerfile.web  start-web-service.sh
docs/: CHANGELOG.md  archetype.yaml
migrations/2022-02-13-230658_create_avatars/: down.sql  up.sql
scripts/: setup-test-env.sh
src/: db.rs  guards.rs  lib.rs  main.rs  models.rs  responders.rs  schema.rs  util.rs
