[package]
name = "archetype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
serde_json = "1.0.59"