[package]
name = "archetype"
version = "1.0.7"
edition = "2018"

[[bin]]
name = "archetype"
path = "src/main.rs"

[lib]
name = "archetype_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
serde_json = "1.0.59"
tokio = { version = "1.16.1", features = ["full"] }
base64 = "0.13.0"
infer = "0.3"
chrono = "0.4.19"
regex = "1.5.5"
clap = { version = "4.3.19", features = ["derive"] }

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
